kube_manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-svc
spec:
  selector:
    app: mywisecow-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4499
  type: ClusterIP
